--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,3 +41,10 @@
     font-weight: 700;
     font-style: normal;
   }
+  @layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
